--- a/admin/language/nb-NO/nb-NO.com_polartour.ini
+++ b/admin/language/nb-NO/nb-NO.com_polartour.ini
@@ -2,3 +2,5 @@ COM_POLARTOUR_COMPONENT_LABEL="Polartour"
 COM_POLARTOUR_COMPONENT_DESC="Joomla komponent for å styre sjakkturneringer."
 COM_POLARTOUR_POLARTOUR_TITLE="Polartour administrasjon"
 COM_POLARTOUR_CONFIGURATION="Polartour konfigurering"
+COM_POLARTOUR_PGNVIEWER_LABEL="Partiviser"
+COM_POLARTOUR_PGNVIEWER_DESC="Link til en partiviser"
