--- a/site/language/nb-NO/nb-NO.com_polartour.ini
+++ b/site/language/nb-NO/nb-NO.com_polartour.ini
@@ -10,3 +10,7 @@ COM_POLARTOUR_TABLE_TIEBREAK3=""
 COM_POLARTOUR_TABLE_TIEBREAK4=""
 COM_POLARTOUR_TABLE_TIEBREAK5=""
 COM_POLARTOUR_TABLE_PERFORMANCE="Prestasjon"
+COM_POLARTOUR_TABLE_EVENT="Turnering"
+COM_POLARTOUR_TABLE_STARTDATE="Start"
+COM_POLARTOUR_TABLE_ENDDATE="Slutt"
+COM_POLARTOUR_TABLE_UPDATED="Oppdatert"
