--- a/site/language/nb-NO/nb-NO.com_polartour.ini
+++ b/site/language/nb-NO/nb-NO.com_polartour.ini
@@ -14,3 +14,6 @@ COM_POLARTOUR_TABLE_EVENT="Turnering"
 COM_POLARTOUR_TABLE_STARTDATE="Start"
 COM_POLARTOUR_TABLE_ENDDATE="Slutt"
 COM_POLARTOUR_TABLE_UPDATED="Oppdatert"
+COM_POLARTOUR_CLOSE="Avbryt"
+COM_POLARTOUR_SAVE="Lagre"
+
