--- a/site/language/nb-NO/nb-NO.com_polartour.ini
+++ b/site/language/nb-NO/nb-NO.com_polartour.ini
@@ -16,4 +16,14 @@ COM_POLARTOUR_TABLE_ENDDATE="Slutt"
 COM_POLARTOUR_TABLE_UPDATED="Oppdatert"
 COM_POLARTOUR_CLOSE="Avbryt"
 COM_POLARTOUR_SAVE="Lagre"
-
+COM_POLARTOUR_TOURNAMENT_ID="Id"
+COM_POLARTOUR_TOURNAMENT_OWNER="Eier"
+COM_POLARTOUR_TOURNAMENT_EVENT="Turnering"
+COM_POLARTOUR_TOURNAMENT_SITE="Spillested"
+COM_POLARTOUR_TOURNAMENT_ORGANIZER="Arrangør"
+COM_POLARTOUR_TOURNAMENT_ROUNDS="Antall runder"
+COM_POLARTOUR_TOURNAMENT_ELOCAT="Rating kategori"
+COM_POLARTOUR_TOURNAMENT_CLASSICAL="Langsjakk"
+COM_POLARTOUR_TOURNAMENT_RAPID="Hurtigsjakk"
+COM_POLARTOUR_TOURNAMENT_BLITZ="Lynsjakk"
+COM_POLARTOUR_TOURNAMENT_SHOWTIEBREAK="Vis kvalitet"
