--- a/site/language/nb-NO/nb-NO.com_polartour.ini
+++ b/site/language/nb-NO/nb-NO.com_polartour.ini
@@ -27,3 +27,30 @@ COM_POLARTOUR_TOURNAMENT_CLASSICAL="Langsjakk"
 COM_POLARTOUR_TOURNAMENT_RAPID="Hurtigsjakk"
 COM_POLARTOUR_TOURNAMENT_BLITZ="Lynsjakk"
 COM_POLARTOUR_TOURNAMENT_SHOWTIEBREAK="Vis kvalitet"
+COM_POLARTOUR_TOURNAMENT_NEEDED="Minimum"
+COM_POLARTOUR_TOURNAMENT_ALLWAYS="Alltid"
+COM_POLARTOUR_TOURNAMENT_SHOWELO="Vis rating"
+COM_POLARTOUR_TOURNAMENT_SHOWCLUB="Vis klubb"
+COM_POLARTOUR_TOURNAMENT_SHOWCOLOR="Vis farge"
+COM_POLARTOUR_TOURNAMENT_SWITCHNAME="Etternavn først"
+COM_POLARTOUR_TOURNAMENT_TIEBREAK="Kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_TIEBREAK1="Førstekvalitet"
+COM_POLARTOUR_TOURNAMENT_TIEBREAK2="Andrekvalitet"
+COM_POLARTOUR_TOURNAMENT_TIEBREAK3="Tredjekvalitet"
+COM_POLARTOUR_TOURNAMENT_TIEBREAK4="Fjerdekvalitet"
+COM_POLARTOUR_TOURNAMENT_TIEBREAK5="Femtekvalitet"
+COM_POLARTOUR_TOURNAMENT_BUCHHOLZCUT1="Buchholz cut 1"
+COM_POLARTOUR_TOURNAMENT_BUCHHOLZCUT2="Buchholz cut 2"
+COM_POLARTOUR_TOURNAMENT_SONNEBORN="Sonneborn-Berger"
+COM_POLARTOUR_TOURNAMENT_DIRECTENCOUNTER="Innbyrdes oppgjør"
+COM_POLARTOUR_TOURNAMENT_TOURNAMENTTYPE="Turneringsform"
+COM_POLARTOUR_TOURNAMENT_KONRAD="Konrad"
+COM_POLARTOUR_TOURNAMENT_MONRAD="Monrad"
+COM_POLARTOUR_TOURNAMENT_SWISS="Sveitser"
+COM_POLARTOUR_TOURNAMENT_ROUNDROBIN="Berger"
+COM_POLARTOUR_TOURNAMENT_DOUBLEROUNDROBIN="Dobbel berger"
+COM_POLARTOUR_TOURNAMENT_STARTDATE="Start"
+COM_POLARTOUR_TOURNAMENT_ENDDATE="Slutt"
+COM_POLARTOUR_TOURNAMENT_UPDATED="Sist oppdatert"
+COM_POLARTOUR_TOURNAMENT_PGNFILE="Partifil"
+COM_POLARTOUR_TOURNAMENT_COMMENT="Kommentarer"
