--- a/admin/language/en-GB/en-GB.com_polartour.ini
+++ b/admin/language/en-GB/en-GB.com_polartour.ini
@@ -4,3 +4,50 @@ COM_POLARTOUR_POLARTOUR_TITLE="Polartour administrasjon"
 COM_POLARTOUR_CONFIGURATION="Polartour konfigurering"
 COM_POLARTOUR_PGNVIEWER_LABEL="Partiviser"
 COM_POLARTOUR_PGNVIEWER_DESC="Link til en partiviser"
+
+COM_POLARTOUR_TOURNAMENT_FIELD_EVENT="Turnering"
+COM_POLARTOUR_TOURNAMENT_FIELD_EVENT_DESC="Navn på turnering"
+COM_POLARTOUR_TOURNAMENT_FIELD_SITE="Spillested"
+COM_POLARTOUR_TOURNAMENT_FIELD_SITE_DESC="Hvor spilles turneringen="
+COM_POLARTOUR_TOURNAMENT_FIELD_ORGANIZER="Arrangør"
+COM_POLARTOUR_TOURNAMENT_FIELD_ORGANIZER_DESC="Navn på arrangør"
+COM_POLARTOUR_TOURNAMENT_FIELD_ARBITER="Turneringsleder"
+COM_POLARTOUR_TOURNAMENT_FIELD_ARBITER_DESC="Navn på turneringsleder"
+COM_POLARTOUR_TOURNAMENT_FIELD_OWNER="Bruker"
+COM_POLARTOUR_TOURNAMENT_FIELD_OWNER_DESC="Hvem opprettet turneringen"
+COM_POLARTOUR_TOURNAMENT_FIELD_ROUNDS="Runder"
+COM_POLARTOUR_TOURNAMENT_FIELD_ROUNDS_DESC="Antall runder i turneringen"
+COM_POLARTOUR_TOURNAMENT_FIELD_ELOCAT="Turneringstype"
+COM_POLARTOUR_TOURNAMENT_FIELD_ELOCAT_DESC="Turneringstype"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWTIEBREAK="Vi kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWTIEBREAK_DESC="Viser kvalitetsberegning i resultatlisten"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWELO="Vi rating"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWELO_DESC="Viser rating i resultatlisten"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWCLUB="Vis klubb"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWCLUB_DESC="Viser klubbtilhørighet i resultatlisten"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWCOLOR="Vis farge"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWCOLOR_DESC="Uthever hvitpartier i resultlisten"
+COM_POLARTOUR_TOURNAMENT_FIELD_SWITCHNAME="Etternavn først"
+COM_POLARTOUR_TOURNAMENT_FIELD_SWITCHNAME_DESC="Viser etternavnet først i listen"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1="Første kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1_DESC="Viser hva som brukes til første kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK2="Andre kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK2_DESC="Viser hva som brukes til andre kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK3="Tredje kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK3_DESC="Viser hva som brukes til tredje kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK4="Fjerde kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK4_DESC="Viser hva som brukes til fjerde kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK5="Femte kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK5_DESC="Viser hva som brukes til femte kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE="Turneringsform"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_DESC="Turneringsform som brukes i turneringen"
+COM_POLARTOUR_TOURNAMENT_FIELD_STARTDATE="Startdato"
+COM_POLARTOUR_TOURNAMENT_FIELD_STARTDATE_DESC="Når turneringen starter"
+COM_POLARTOUR_TOURNAMENT_FIELD_ENDDATE="Sluttdato"
+COM_POLARTOUR_TOURNAMENT_FIELD_ENDDATE_DESC="Når turneringen slutter"
+COM_POLARTOUR_TOURNAMENT_FIELD_PGNFILE="Partifil"
+COM_POLARTOUR_TOURNAMENT_FIELD_PGNFILE_DESC="Navn på partifil for gjennomspilling av partiene"
+COM_POLARTOUR_TOURNAMENT_FIELD_UPDATED="Oppdatert"
+COM_POLARTOUR_TOURNAMENT_FIELD_UPDATED_DESC="Siste oppdatering"
+COM_POLARTOUR_TOURNAMENT_FIELD_COMMENT="Kommentarer"
+COM_POLARTOUR_TOURNAMENT_FIELD_COMMENT_DESC="Egne kommentarer"
