--- a/admin/language/nb-NO/nb-NO.com_polartour.ini
+++ b/admin/language/nb-NO/nb-NO.com_polartour.ini
@@ -86,3 +86,29 @@ COM_POLARTOUR_PLAYER_FIELD_BORN="Født"
 COM_POLARTOUR_PLAYER_FIELD_BORN_DESC="Fødselsdato"
 COM_POLARTOUR_PLAYER_FIELD_COMMENT="Kommenter"
 COM_POLARTOUR_PLAYER_FIELD_COMMENT_DESC="Fri tekst"
+COM_POLARTOUR_RESULT_FIELD_TOURNAMENTID="Turnering"
+COM_POLARTOUR_RESULT_FIELD_TOURNAMENTID_DESC="Turnering"
+COM_POLARTOUR_RESULT_FIELD_WHITEID="Hvit"
+COM_POLARTOUR_RESULT_FIELD_WHITEID_DESC="Hvit"
+COM_POLARTOUR_RESULT_FIELD_BLACKID="Sort"
+COM_POLARTOUR_RESULT_FIELD_BLACKID_DESC="Sort"
+COM_POLARTOUR_RESULT_FIELD_ROUND="Runde"
+COM_POLARTOUR_RESULT_FIELD_ROUND_DESC="Runde"
+COM_POLARTOUR_RESULT_FIELD_RESULT="Resultat"
+COM_POLARTOUR_RESULT_FIELD_RESULT_DESC="Resultat"
+COM_POLARTOUR_RESULT_FIELD_RESULT_ONGOING="Ikke ferdig"
+COM_POLARTOUR_RESULT_FIELD_RESULT_DRAW="½-½"
+COM_POLARTOUR_RESULT_FIELD_RESULT_WHITEWIN="1-0"
+COM_POLARTOUR_RESULT_FIELD_RESULT_BLACKWIN="0-1"
+COM_POLARTOUR_RESULT_FIELD_RESULT_UNPLAYEDDRAW="F ½-½"
+COM_POLARTOUR_RESULT_FIELD_RESULT_UNPLAYEDWHITEWIN="F 1-0"
+COM_POLARTOUR_RESULT_FIELD_RESULT_UNPLAYEDBLACKWIN="F 0-1"
+COM_POLARTOUR_RESULT_FIELD_RESULT_USESCORE="Bruk poeng"
+COM_POLARTOUR_RESULT_FIELD_WHITESCORE="Hvit poeng"
+COM_POLARTOUR_RESULT_FIELD_WHITESCORE_DESC="Hvit poeng"
+COM_POLARTOUR_RESULT_FIELD_BLACKSCORE="Sort poeng"
+COM_POLARTOUR_RESULT_FIELD_BLACKSCORE_DESC="Sort poeng"
+COM_POLARTOUR_RESULT_FIELD_GAME="Partinr."
+COM_POLARTOUR_RESULT_FIELD_GAME_DESC="Partinr."
+COM_POLARTOUR_RESULT_FIELD_COMMENT="Kommentar"
+COM_POLARTOUR_RESULT_FIELD_COMMENT_DESC="Kommentar"
