--- a/site/language/nb-NO/nb-NO.com_polartour.ini
+++ b/site/language/nb-NO/nb-NO.com_polartour.ini
@@ -21,6 +21,7 @@ COM_POLARTOUR_TOURNAMENT_OWNER="Eier"
 COM_POLARTOUR_TOURNAMENT_EVENT="Turnering"
 COM_POLARTOUR_TOURNAMENT_SITE="Spillested"
 COM_POLARTOUR_TOURNAMENT_ORGANIZER="Arrangør"
+COM_POLARTOUR_TOURNAMENT_ARBITER="Turneringsleder"
 COM_POLARTOUR_TOURNAMENT_ROUNDS="Antall runder"
 COM_POLARTOUR_TOURNAMENT_ELOCAT="Rating kategori"
 COM_POLARTOUR_TOURNAMENT_CLASSICAL="Langsjakk"
@@ -39,16 +40,23 @@ COM_POLARTOUR_TOURNAMENT_TIEBREAK2="Andrekvalitet"
 COM_POLARTOUR_TOURNAMENT_TIEBREAK3="Tredjekvalitet"
 COM_POLARTOUR_TOURNAMENT_TIEBREAK4="Fjerdekvalitet"
 COM_POLARTOUR_TOURNAMENT_TIEBREAK5="Femtekvalitet"
+COM_POLARTOUR_TOURNAMENT_AVERAGEELO="Rating"
+COM_POLARTOUR_TOURNAMENT_AVERAGEELOCUT="Rating cut"
+COM_POLARTOUR_TOURNAMENT_BUCHHOLZ="Buchholz"
+COM_POLARTOUR_TOURNAMENT_MEDIANBUCHHOLZ="Median Buchholz"
+COM_POLARTOUR_TOURNAMENT_MEDIANBUCHHOLZ2="Median Buchholz 2"
 COM_POLARTOUR_TOURNAMENT_BUCHHOLZCUT1="Buchholz cut 1"
 COM_POLARTOUR_TOURNAMENT_BUCHHOLZCUT2="Buchholz cut 2"
-COM_POLARTOUR_TOURNAMENT_SONNEBORN="Sonneborn-Berger"
 COM_POLARTOUR_TOURNAMENT_DIRECTENCOUNTER="Innbyrdes oppgjør"
+COM_POLARTOUR_TOURNAMENT_SONNEBORN="Sonneborn-Berger"
 COM_POLARTOUR_TOURNAMENT_TOURNAMENTTYPE="Turneringsform"
 COM_POLARTOUR_TOURNAMENT_KONRAD="Konrad"
 COM_POLARTOUR_TOURNAMENT_MONRAD="Monrad"
 COM_POLARTOUR_TOURNAMENT_SWISS="Sveitser"
 COM_POLARTOUR_TOURNAMENT_ROUNDROBIN="Berger"
 COM_POLARTOUR_TOURNAMENT_DOUBLEROUNDROBIN="Dobbel berger"
+COM_POLARTOUR_TOURNAMENT_TRIPLEROUNDROBIN="3*Berger"
+COM_POLARTOUR_TOURNAMENT_QUADROROUNDROBIN="4*Berger"
 COM_POLARTOUR_TOURNAMENT_STARTDATE="Start"
 COM_POLARTOUR_TOURNAMENT_ENDDATE="Slutt"
 COM_POLARTOUR_TOURNAMENT_UPDATED="Sist oppdatert"
