--- a/admin/language/nb-NO/nb-NO.com_polartour.ini
+++ b/admin/language/nb-NO/nb-NO.com_polartour.ini
@@ -7,6 +7,7 @@ COM_POLARTOUR_PGNVIEWER_DESC="Link til en partiviser"
 COM_POLARTOUR_TITLE_TOURNAMENTS="Turneringer"
 COM_POLARTOUR_TITLE_PLAYERS="Spillere"
 COM_POLARTOUR_TITLE_RESULTS="Resultater"
+COM_POLARTOUR_TITLE_CATEGORIES="Kategorier"
 COM_POLARTOUR_TOURNAMENT_FIELD_EVENT="Turnering"
 COM_POLARTOUR_TOURNAMENT_FIELD_EVENT_DESC="Navn på turnering"
 COM_POLARTOUR_TOURNAMENT_FIELD_SITE="Spillested"
@@ -40,17 +41,23 @@ COM_POLARTOUR_TOURNAMENT_FIELD_SWITCHNAME="Etternavn først"
 COM_POLARTOUR_TOURNAMENT_FIELD_SWITCHNAME_DESC="Viser etternavnet først i listen"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1="Første kvalitet"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1_DESC="Viser hva som brukes til første kvalitetsberegning"
-COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1="Andre kvalitet"
-COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1_DESC="Viser hva som brukes til andre kvalitetsberegning"
-COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1="Tredje kvalitet"
-COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1_DESC="Viser hva som brukes til tredje kvalitetsberegning"
-COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1="Fjerde kvalitet"
-COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1_DESC="Viser hva som brukes til fjerde kvalitetsberegning"
-COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1="Femte kvalitet"
-COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1_DESC="Viser hva som brukes til femte kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK2="Andre kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK2_DESC="Viser hva som brukes til andre kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK3="Tredje kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK3_DESC="Viser hva som brukes til tredje kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK4="Fjerde kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK4_DESC="Viser hva som brukes til fjerde kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK5="Femte kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK5_DESC="Viser hva som brukes til femte kvalitetsberegning"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_NONE="Ingen"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELO="Rating"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELOCUT="Rating cut"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZ="Buchholz"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ="Median Buchholz"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ2="Median Buchholz 2"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT1="Buchholz cut 1"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT2="Buchholz cut 2"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_DIRECTENCOUNTER="Innbyrdes oppgjør"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_SONNEBORNBERGER="Sonneborn Berger"
 COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE="Turneringsform"
 COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_DESC="Turneringsform som brukes i turneringen"
@@ -60,6 +67,8 @@ COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_MONRAD="Monrad"
 COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_SWISS="Sveitser"
 COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_RR="Berger"
 COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_DOUBLERR="Dobbelt berger"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_DTRIPLERR="3 x berger"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_QUADRORR="4 x berger"
 COM_POLARTOUR_TOURNAMENT_FIELD_STARTDATE="Startdato"
 COM_POLARTOUR_TOURNAMENT_FIELD_STARTDATE_DESC="Når turneringen starter"
 COM_POLARTOUR_TOURNAMENT_FIELD_ENDDATE="Sluttdato"
@@ -101,3 +110,5 @@ COM_POLARTOUR_RESULT_FIELD_RESULT_UNPLAYEDWHITEWIN="F 1-0"
 COM_POLARTOUR_RESULT_FIELD_RESULT_UNPLAYEDBLACKWIN="F 0-1"
 COM_POLARTOUR_RESULT_FIELD_GAME="Partinr."
 COM_POLARTOUR_RESULT_FIELD_GAME_DESC="Partinr."
+COM_POLARTOUR_FIELD_CATID_LABEL="Kategori"
+COM_POLARTOUR_FIELD_CATID_DESC="Velg kategori"
