--- a/site/language/nb-NO/nb-NO.com_polartour.ini
+++ b/site/language/nb-NO/nb-NO.com_polartour.ini
@@ -61,3 +61,7 @@ COM_POLARTOUR_TOURNAMENT_STARTDATE="Start"
 COM_POLARTOUR_TOURNAMENT_ENDDATE="Slutt"
 COM_POLARTOUR_TOURNAMENT_UPDATED="Sist oppdatert"
 COM_POLARTOUR_TOURNAMENT_PGNFILE="Partifil"
+COM_POLARTOUR_SEARCHPLAYER_LABEL="Velg spiller"
+COM_POLARTOUR_SEARCHPLAYER_NAME="Spillere"
+COM_POLARTOUR_CANCEL="Avbryt"
+COM_POLARTOUR_OK="Ok"
