--- a/admin/language/en-GB/en-GB.com_polartour.ini
+++ b/admin/language/en-GB/en-GB.com_polartour.ini
@@ -4,7 +4,10 @@ COM_POLARTOUR_POLARTOUR_TITLE="Polartour administrasjon"
 COM_POLARTOUR_CONFIGURATION="Polartour konfigurering"
 COM_POLARTOUR_PGNVIEWER_LABEL="Partiviser"
 COM_POLARTOUR_PGNVIEWER_DESC="Link til en partiviser"
-
+COM_POLARTOUR_TITLE_TOURNAMENTS="Turneringer"
+COM_POLARTOUR_TITLE_PLAYERS="Spillere"
+COM_POLARTOUR_TITLE_RESULTS="Resultater"
+COM_POLARTOUR_TITLE_CATEGORIES="Kategorier"
 COM_POLARTOUR_TOURNAMENT_FIELD_EVENT="Turnering"
 COM_POLARTOUR_TOURNAMENT_FIELD_EVENT_DESC="Navn på turnering"
 COM_POLARTOUR_TOURNAMENT_FIELD_SITE="Spillested"
@@ -19,9 +22,16 @@ COM_POLARTOUR_TOURNAMENT_FIELD_ROUNDS="Runder"
 COM_POLARTOUR_TOURNAMENT_FIELD_ROUNDS_DESC="Antall runder i turneringen"
 COM_POLARTOUR_TOURNAMENT_FIELD_ELOCAT="Turneringstype"
 COM_POLARTOUR_TOURNAMENT_FIELD_ELOCAT_DESC="Turneringstype"
-COM_POLARTOUR_TOURNAMENT_FIELD_SHOWTIEBREAK="Vi kvalitet"
+COM_POLARTOUR_TOURNAMENT_FIELD_ELOCAT_NONE="Udefinert"
+COM_POLARTOUR_TOURNAMENT_FIELD_ELOCAT_CLASSICAL="Langsjakk"
+COM_POLARTOUR_TOURNAMENT_FIELD_ELOCAT_RAPID="Hurtigsjakk"
+COM_POLARTOUR_TOURNAMENT_FIELD_ELOCAT_BLITZ="Lynsjakk"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWTIEBREAK="Vis kvalitet"
 COM_POLARTOUR_TOURNAMENT_FIELD_SHOWTIEBREAK_DESC="Viser kvalitetsberegning i resultatlisten"
-COM_POLARTOUR_TOURNAMENT_FIELD_SHOWELO="Vi rating"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWTIEBREAK_NONE="Ingen"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWTIEBREAK_MIN="Kun nødvendig"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWTIEBREAK_MAX="Alle"
+COM_POLARTOUR_TOURNAMENT_FIELD_SHOWELO="Vis rating"
 COM_POLARTOUR_TOURNAMENT_FIELD_SHOWELO_DESC="Viser rating i resultatlisten"
 COM_POLARTOUR_TOURNAMENT_FIELD_SHOWCLUB="Vis klubb"
 COM_POLARTOUR_TOURNAMENT_FIELD_SHOWCLUB_DESC="Viser klubbtilhørighet i resultatlisten"
@@ -39,8 +49,26 @@ COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK4="Fjerde kvalitet"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK4_DESC="Viser hva som brukes til fjerde kvalitetsberegning"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK5="Femte kvalitet"
 COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK5_DESC="Viser hva som brukes til femte kvalitetsberegning"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_NONE="Ingen"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELO="Rating"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELOCUT="Rating cut"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZ="Buchholz"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ="Median Buchholz"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ2="Median Buchholz 2"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT1="Buchholz cut 1"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT2="Buchholz cut 2"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_DIRECTENCOUNTER="Innbyrdes oppgjør"
+COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_SONNEBORNBERGER="Sonneborn Berger"
 COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE="Turneringsform"
 COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_DESC="Turneringsform som brukes i turneringen"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_UNKNOWN="Udefinert"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_KONRAD="Konrad"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_MONRAD="Monrad"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_SWISS="Sveitser"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_RR="Berger"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_DOUBLERR="Dobbelt berger"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_DTRIPLERR="3 x berger"
+COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_QUADRORR="4 x berger"
 COM_POLARTOUR_TOURNAMENT_FIELD_STARTDATE="Startdato"
 COM_POLARTOUR_TOURNAMENT_FIELD_STARTDATE_DESC="Når turneringen starter"
 COM_POLARTOUR_TOURNAMENT_FIELD_ENDDATE="Sluttdato"
@@ -49,5 +77,38 @@ COM_POLARTOUR_TOURNAMENT_FIELD_PGNFILE="Partifil"
 COM_POLARTOUR_TOURNAMENT_FIELD_PGNFILE_DESC="Navn på partifil for gjennomspilling av partiene"
 COM_POLARTOUR_TOURNAMENT_FIELD_UPDATED="Oppdatert"
 COM_POLARTOUR_TOURNAMENT_FIELD_UPDATED_DESC="Siste oppdatering"
-COM_POLARTOUR_TOURNAMENT_FIELD_COMMENT="Kommentarer"
-COM_POLARTOUR_TOURNAMENT_FIELD_COMMENT_DESC="Egne kommentarer"
+COM_POLARTOUR_PLAYER_FIELD_TOURNAMENTID="Turnering"
+COM_POLARTOUR_PLAYER_FIELD_TOURNAMENTID_DESC="Hvilken turnering spilleren deltar i"
+COM_POLARTOUR_PLAYER_FIELD_FIRSTNAME="Fornavn"
+COM_POLARTOUR_PLAYER_FIELD_FIRSTNAME_DESC="Fornavn til spilleren"
+COM_POLARTOUR_PLAYER_FIELD_LASTNAME="Etternavn"
+COM_POLARTOUR_PLAYER_FIELD_LASTNAME_DESC="Etternavnet til spilleren"
+COM_POLARTOUR_PLAYER_FIELD_CLUB="Klubb"
+COM_POLARTOUR_PLAYER_FIELD_CLUB_DESC="Klubbtilhørighet for spilleren"
+COM_POLARTOUR_PLAYER_FIELD_ELO="Rating"
+COM_POLARTOUR_PLAYER_FIELD_ELO_DESC="Rating til spilleren"
+COM_POLARTOUR_PLAYER_FIELD_STARTNR="Startnr."
+COM_POLARTOUR_PLAYER_FIELD_STARTNR_DESC="Startnummer"
+COM_POLARTOUR_PLAYER_FIELD_BORN="Født"
+COM_POLARTOUR_PLAYER_FIELD_BORN_DESC="Fødselsdato"
+COM_POLARTOUR_RESULT_FIELD_TOURNAMENTID="Turnering"
+COM_POLARTOUR_RESULT_FIELD_TOURNAMENTID_DESC="Turnering"
+COM_POLARTOUR_RESULT_FIELD_WHITEID="Hvit"
+COM_POLARTOUR_RESULT_FIELD_WHITEID_DESC="Hvit"
+COM_POLARTOUR_RESULT_FIELD_BLACKID="Sort"
+COM_POLARTOUR_RESULT_FIELD_BLACKID_DESC="Sort"
+COM_POLARTOUR_RESULT_FIELD_ROUND="Runde"
+COM_POLARTOUR_RESULT_FIELD_ROUND_DESC="Runde"
+COM_POLARTOUR_RESULT_FIELD_RESULT="Resultat"
+COM_POLARTOUR_RESULT_FIELD_RESULT_DESC="Resultat"
+COM_POLARTOUR_RESULT_FIELD_RESULT_ONGOING="Ikke ferdig"
+COM_POLARTOUR_RESULT_FIELD_RESULT_DRAW="½-½"
+COM_POLARTOUR_RESULT_FIELD_RESULT_WHITEWIN="1-0"
+COM_POLARTOUR_RESULT_FIELD_RESULT_BLACKWIN="0-1"
+COM_POLARTOUR_RESULT_FIELD_RESULT_UNPLAYEDDRAW="F ½-½"
+COM_POLARTOUR_RESULT_FIELD_RESULT_UNPLAYEDWHITEWIN="F 1-0"
+COM_POLARTOUR_RESULT_FIELD_RESULT_UNPLAYEDBLACKWIN="F 0-1"
+COM_POLARTOUR_RESULT_FIELD_GAME="Partinr."
+COM_POLARTOUR_RESULT_FIELD_GAME_DESC="Partinr."
+COM_POLARTOUR_FIELD_CATID_LABEL="Kategori"
+COM_POLARTOUR_FIELD_CATID_DESC="Velg kategori"
