--- a/admin/language/nb-NO/nb-NO.com_polartour.ini
+++ b/admin/language/nb-NO/nb-NO.com_polartour.ini
@@ -112,3 +112,9 @@ COM_POLARTOUR_RESULT_FIELD_GAME="Partinr."
 COM_POLARTOUR_RESULT_FIELD_GAME_DESC="Partinr."
 COM_POLARTOUR_FIELD_CATID_LABEL="Kategori"
 COM_POLARTOUR_FIELD_CATID_DESC="Velg kategori"
+COM_POLARTOUR_FIELD_ONLYLIST_LABEL="Kun liste"
+COM_POLARTOUR_FIELD_ONLYLIST_DESC="Vis kun liste over turneringer"
+COM_POLARTOUR_FIELD_STARTDATE_LABEL="Startdato"
+COM_POLARTOUR_FIELD_STARTDATE_DESC="Dato for første turnering i listen"
+COM_POLARTOUR_FIELD_ENDDATE_LABEL="Sluttdato"
+COM_POLARTOUR_FIELD_ENDDATE_DESC="Dato for siste turnering i listen"
