--- a/site/language/nb-NO/nb-NO.com_polartour.ini
+++ b/site/language/nb-NO/nb-NO.com_polartour.ini
@@ -65,3 +65,5 @@ COM_POLARTOUR_SEARCHPLAYER_LABEL="Velg spiller"
 COM_POLARTOUR_SEARCHPLAYER_NAME="Spillere"
 COM_POLARTOUR_CANCEL="Avbryt"
 COM_POLARTOUR_OK="Ok"
+COM_POLARTOUR_FIELD_CATID_LABEL="Kategori"
+COM_POLARTOUR_FIELD_CATID_DESC="Velg kategori"
